Fix #122256 : OBJ importer was transforming mesh before using correct mesh data. This resulted in wrong values for bounds calculation.